@@ -1,3 +1,10 @@
+2005-03-31  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/callbacks.c: (cb_switch_page), (cb_change_current_page):
+	* src/callbacks.h:
+	* src/interface.c: (create_main_window): Fixed graph drawing when
+	starting on tab #2.
+
 2005-03-27  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* src/interface.c: (create_main_window):
